--- a/style.css
+++ b/style.css
@@ -643,7 +643,53 @@ td input[type="text"]{
 }
 
 /******* End Account page *******/
+/******* Start Login page *******/
+.login_section {
+	padding-top: 33vh;
+	padding-bottom: 33vh;
+}
 
+.login_section .login_form_box{
+	padding: 16px;
+	border: 1px solid #e8bc64;
+	box-shadow: 0 0 0 0.1rem rgba(232, 188, 100, 1); /*#e8bc64*/
+
+	border-radius: 7px 0px 7px 0px;
+}
+
+.login_section .logotype_box{
+	padding: 2px 2px 6px 2px;
+	text-align: center;
+}
+
+.login_section .logotype_box img{
+	max-height: 40px;
+}
+
+.login_form input{
+	margin-top: 4px;
+	margin-bottom: 4px;
+}
+
+.form_title{
+	font-weight: 600;
+	font-size: 20px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.button_submit_box{
+padding-top: 8px;
+}
+
+.password_recovery_box{
+	padding-top: 12px;
+}
+
+
+
+
+/******* End Login page *******/
 
 
 /******* Start Media Query *******/
